feat: update env

--- a/.env
+++ b/.env
@@ -7,5 +7,8 @@ NEXT_PUBLIC_API_VERSION=v1alpha
 NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill-ai-user
 NEXT_PUBLIC_CONSOLE_EDITION=local:ce-dev
 NEXT_PUBLIC_DISABLE_USAGE_COLLECTION=false
-NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://localhost:8080
+NEXT_PUBLIC_API_GATEWAY_BASE_URL_FOR_CLIENT=http://localhost:8080
+
+# This should be set to http://api-gateway:8080 when working in docker
+API_GATEWAY_BASE_URL_FOR_SERVER=http://localhost:8080
 NEXT_PUBLIC_SELF_SIGNED_CERTIFICATION=false
