#306 react query migration form version 3 to version 4

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@amplitude/analytics-browser": "^0.4.1",
     "@code-hike/mdx": "^0.7.3",
     "@instill-ai/design-system": "^0.0.146",
+    "@tanstack/react-query": "^4.24.9",
+    "@tanstack/react-query-devtools": "^4.24.9",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
@@ -41,7 +43,6 @@
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
-    "react-query": "^3.38.0",
     "react-select": "^5.3.1",
     "remark-frontmatter": "^4.0.1",
     "sharp": "^0.30.7",
@@ -58,6 +59,7 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@next/env": "^12.2.3",
+    "@playwright/test": "^1.25.2",
     "@storybook/addon-actions": "^7.0.0-beta.29",
     "@storybook/addon-docs": "^7.0.0-beta.29",
     "@storybook/addon-essentials": "^7.0.0-beta.29",
@@ -103,7 +105,6 @@
     "lint-staged": ">=10",
     "msw": "^0.42.1",
     "npm-run-all": "^4.1.5",
-    "@playwright/test": "^1.25.2",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.8",
