feat: replace useDeleteResourceGuard with useCreateUpdateDeleteResourceGuard

--- a/.env
+++ b/.env
@@ -10,5 +10,8 @@ NEXT_PUBLIC_DISABLE_USAGE_COLLECTION=false
 NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://localhost:8080
 NEXT_PUBLIC_SELF_SIGNED_CERTIFICATION=false
 
+# When enable, the console won't be able to create, delete, update resource
+NEXT_PUBLIC_DISABLE_CREATE_DELETE_UPDATE_RESOURCE=true
+
 # This should be set to http://api-gateway:8080 when working in docker
 NEXT_SERVER_API_GATEWAY_BASE_URL=http://localhost:8080
