feat: expose a env that can disable all create, update, delete action (#363)
Because

- We want a way to disable resource action

This commit

- expose a env that can disable all create, update, delete action
- NEXT_PUBLIC_DISABLE_CREATE_UPDATE_DELETE_RESOURCE

--- a/.env
+++ b/.env
@@ -1,14 +1,30 @@
+# These env are the base url of our backends, we are using api-gateway right now so you can safely ignore these env. They are only for debugging right now.
 NEXT_PUBLIC_CONSOLE_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_MGMT_BACKEND_BASE_URL=http://localhost:8084
 NEXT_PUBLIC_PIPELINE_BACKEND_BASE_URL=http://localhost:8081
 NEXT_PUBLIC_CONNECTOR_BACKEND_BASE_URL=http://localhost:8082
 NEXT_PUBLIC_MODEL_BACKEND_BASE_URL=http://localhost:8083
+
+# The API version
 NEXT_PUBLIC_API_VERSION=v1alpha
+
+# This is for the cookie name we set to ensure usage collection, you can ignore this env
 NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill-ai-user
+
+# The edition of the console. If you are using our open source console, you don't need to change it
 NEXT_PUBLIC_CONSOLE_EDITION=local:ce-dev
+
+# When you set this to true, console will disable usage collection
 NEXT_PUBLIC_DISABLE_USAGE_COLLECTION=false
+
+# The endpoint to indicate the base url of api-gateway
 NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://localhost:8080
-NEXT_PUBLIC_SELF_SIGNED_CERTIFICATION=false
 
 # This should be set to http://api-gateway:8080 when working in docker
 NEXT_SERVER_API_GATEWAY_BASE_URL=http://localhost:8080
+
+# This env is a placeholder, do not use it
+NEXT_PUBLIC_SELF_SIGNED_CERTIFICATION=false
+
+# When enable, the console won't be able to create, update, delete resource
+NEXT_PUBLIC_DISABLE_CREATE_UPDATE_DELETE_RESOURCE=false
