feat: Impl pagination (#365)
Because

- #343 

This commit

- Implement pagination 
- close #343

--- a/.env
+++ b/.env
@@ -28,3 +28,6 @@ NEXT_PUBLIC_SELF_SIGNED_CERTIFICATION=false
 
 # When enable, the console won't be able to create, update, delete resource
 NEXT_PUBLIC_DISABLE_CREATE_UPDATE_DELETE_RESOURCE=false
+
+# Centralize configuration that control the amount of items per page of every lists.
+NEXT_PUBLIC_LIST_PAGE_SIZE=6
