--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -1,9 +1,7 @@
 name: Build and Push Images
 
 on:
-  push:
-    branches:
-      - main
+  workflow_call:
   release:
     types: [published]
 
@@ -21,11 +19,22 @@ jobs:
           password: ${{ secrets.botDockerHubPassword }}
 
       - name: Build and push (latest)
+        if: github.event_name == 'pull_request'
         uses: docker/build-push-action@v3
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64          
           push: true
           tags: instill/console:latest
+          cache-from: type=registry,ref=instill/console:buildcache
+          cache-to: type=registry,ref=instill/console:buildcache,mode=max
+
+      - name: Build and push (rc)
+        if: github.ref == 'refs/heads/rc'
+        uses: docker/build-push-action@v3
+        with:
+          platforms: linux/amd64,linux/arm64          
+          push: true
+          tags: instill/console:rc
           cache-from: type=registry,ref=instill/console:buildcache
           cache-to: type=registry,ref=instill/console:buildcache,mode=max
 
@@ -85,7 +94,7 @@ jobs:
         if: github.event_name == 'release'
         uses: docker/build-push-action@v3
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64          
           push: true
           tags: instill/console:${{steps.set_version.outputs.no_v_tag}}
           cache-from: type=registry,ref=instill/console:buildcache
