--- a/.env
+++ b/.env
@@ -14,9 +14,6 @@ NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill-ai-user
 # The edition of the console. If you are using our open source console, you don't need to change it
 NEXT_PUBLIC_CONSOLE_EDITION=local:ce-dev
 
-# When you set this to true, console will disable usage collection
-NEXT_PUBLIC_DISABLE_USAGE_COLLECTION=false
-
 # The endpoint to indicate the base url of api-gateway
 NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://localhost:8080
 
@@ -31,3 +28,10 @@ NEXT_PUBLIC_DISABLE_CREATE_UPDATE_DELETE_RESOURCE=false
 
 # Centralize configuration that control the amount of items per page of every lists.
 NEXT_PUBLIC_LIST_PAGE_SIZE=6
+
+# When you set this to true, console will disable usage collection
+NEXT_PUBLIC_DISABLE_USAGE_COLLECTION=false
+
+# When set to true, the onboarding cookie can only be set on a https domain
+# If you are using http, you need to set this to false
+NEXT_PUBLIC_SET_SECURE_COOKIE=true
