--- a/.env
+++ b/.env
@@ -1,10 +1,3 @@
-# These env are the base url of our backends, we are using api-gateway right now so you can safely ignore these env. They are only for debugging right now.
-NEXT_PUBLIC_CONSOLE_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_MGMT_BACKEND_BASE_URL=http://localhost:8084
-NEXT_PUBLIC_PIPELINE_BACKEND_BASE_URL=http://localhost:8081
-NEXT_PUBLIC_CONNECTOR_BACKEND_BASE_URL=http://localhost:8082
-NEXT_PUBLIC_MODEL_BACKEND_BASE_URL=http://localhost:8083
-
 # The API version
 NEXT_PUBLIC_API_VERSION=v1alpha
 
@@ -17,7 +10,7 @@ NEXT_PUBLIC_CONSOLE_EDITION=local:ce-dev
 # The endpoint to indicate the base url of api-gateway
 NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://localhost:8080
 
-# This should be set to http://api-gateway:8080 when working in docker
+# This should be set to http://api-gateway:8080 when working in docker with VDP.
 NEXT_SERVER_API_GATEWAY_BASE_URL=http://localhost:8080
 
 # This env is a placeholder, do not use it
@@ -35,3 +28,10 @@ NEXT_PUBLIC_DISABLE_USAGE_COLLECTION=false
 # When set to true, the onboarding cookie can only be set on a https domain
 # If you are using http, you need to set this to false
 NEXT_PUBLIC_SET_SECURE_COOKIE=true
+
+# These env are the base url of our backends, we are using api-gateway right now so you can safely ignore these env. They are only for debugging right now.
+NEXT_PUBLIC_CONSOLE_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_MGMT_BACKEND_BASE_URL=http://localhost:8084
+NEXT_PUBLIC_PIPELINE_BACKEND_BASE_URL=http://localhost:8081
+NEXT_PUBLIC_CONNECTOR_BACKEND_BASE_URL=http://localhost:8082
+NEXT_PUBLIC_MODEL_BACKEND_BASE_URL=http://localhost:8083
