--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "private": false,
   "scripts": {
     "docker-build": "docker build -f Dockerfile -t instill-console .",
-    "docker-run": "docker run --rm -t --network instill-network --entrypoint ./entrypoint.sh -p 3000:3000 -e NEXT_PUBLIC_CONSOLE_BASE_URL='http://localhost:3000' -e NEXT_PUBLIC_API_GATEWAY_BASE_URL='http://localhost:8080' -e NEXT_PUBLIC_API_VERSION='v1alpha' -e NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME='instill-ai-user' -e NEXT_SERVER_API_GATEWAY_BASE_URL=http://api-gateway:8080 -e NEXT_PUBLIC_DISABLE_CREATE_UPDATE_DELETE_RESOURCE=false instill-console",
+    "docker-run": "docker run --rm -t --network instill-network --entrypoint ./entrypoint.sh -p 3000:3000 -e NEXT_PUBLIC_CONSOLE_BASE_URL='http://localhost:3000' -e NEXT_PUBLIC_API_GATEWAY_BASE_URL='http://localhost:8080' -e NEXT_PUBLIC_API_VERSION='v1alpha' -e NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME='instill-ai-user' -e NEXT_SERVER_API_GATEWAY_BASE_URL=http://api-gateway:8080 -e NEXT_PUBLIC_DISABLE_CREATE_UPDATE_DELETE_RESOURCE=false -e NEXT_PUBLIC_SET_SECURE_COOKIE=true instill-console",
     "docker-build-test": "docker build -f Dockerfile.playwright --build-arg TEST_USER='root' -t instill-console-integration .",
     "docker-run-test": "docker run --rm -t --network instill-network --entrypoint ./entrypoint-playwright.sh -e NEXT_PUBLIC_CONSOLE_BASE_URL='http://console:3000' -e NEXT_PUBLIC_API_GATEWAY_BASE_URL='http://api-gateway:8080' -e NEXT_PUBLIC_API_VERSION='v1alpha' -e NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME='instill-ai-user' -e NEXT_PUBLIC_SELF_SIGNED_CERTIFICATION=true instill-console-integration",
     "docker:prune-cache": "docker buildx prune",
-    "dev": "node next-env.mjs && next dev",
+    "dev": "NEXT_ENV_UPDATE_ENV_FILE=false node next-env.mjs && next dev",
     "build": "next build",
     "start": "next start",
     "test": "jest",
@@ -23,7 +23,7 @@
     "prettier:check": "prettier --check",
     "lint": "next lint",
     "download-airbyte-icons": "node ./downloadAirbyteIcons.js",
-    "integration-test": "node next-env.mjs && npx playwright test"
+    "integration-test": "NEXT_ENV_UPDATE_ENV_FILE=false node next-env.mjs && npx playwright test"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^0.4.1",
