--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
     "integration-test": "NEXT_ENV_UPDATE_ENV_FILE=false node next-env.mjs && npx playwright test"
   },
   "dependencies": {
-    "@amplitude/analytics-browser": "^0.4.1",
+    "@amplitude/analytics-browser": "^1.9.1",
     "@code-hike/mdx": "^0.7.3",
     "@instill-ai/design-system": "^0.0.146",
-    "@tanstack/react-query": "^4.24.9",
-    "@tanstack/react-query-devtools": "^4.24.9",
-    "axios": "^0.27.2",
+    "@instill-ai/toolkit": "^0.23.0",
+    "@tanstack/react-query": "^4.26.1",
+    "@tanstack/react-query-devtools": "^4.26.1",
+    "axios": "^1.0.0",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
     "copy-to-clipboard": "^3.3.2",
     "cross-env": "^7.0.3",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
-    "next": "^13.1.2",
+    "next": "^13.2.4",
     "next-mdx-remote": "^4.1.0",
     "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
