--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
   "dependencies": {
     "@amplitude/analytics-browser": "^1.9.1",
     "@code-hike/mdx": "^0.7.3",
-    "@instill-ai/design-system": "^0.9.0",
-    "@instill-ai/toolkit": "^0.23.0",
+    "@instill-ai/design-system": "^0.9.1",
+    "@instill-ai/toolkit": "^0.23.1",
+    "@radix-ui/react-select": "^1.2.1",
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.26.1",
-    "axios": "^1.0.0",
+    "axios": "^1.3.4",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
     "copy-to-clipboard": "^3.3.2",
@@ -51,7 +52,9 @@
     "shiki": "^0.11.1",
     "uuid": "^8.3.2",
     "yaml": "^2.0.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zod": "^3.21.4",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -61,7 +64,7 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@next/env": "^12.2.3",
-    "@playwright/test": "^1.31.2",
+    "@playwright/test": "^1.32.2",
     "@storybook/addon-actions": "^7.0.0-beta.29",
     "@storybook/addon-docs": "^7.0.0-beta.29",
     "@storybook/addon-essentials": "^7.0.0-beta.29",
@@ -114,7 +117,7 @@
     "require-from-string": "^2.0.2",
     "storybook": "^7.0.0-beta.29",
     "storybook-addon-next-router": "^4.0.2",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0"
   },
