--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@amplitude/analytics-browser": "^1.9.1",
     "@code-hike/mdx": "^0.7.3",
     "@instill-ai/design-system": "^0.10.1",
-    "@instill-ai/toolkit": "^0.26.3",
+    "@instill-ai/toolkit": "^0.26.5",
     "@radix-ui/react-select": "^1.2.1",
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.26.1",
@@ -96,6 +96,7 @@
     "babel-loader": "^8.2.4",
     "dotenv": "^16.0.1",
     "eslint": "^8.13.0",
+    "eslint-config-next": "^13.2.4",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.1.4",
