feat: public amplitude key

--- a/.env
+++ b/.env
@@ -29,6 +29,9 @@ NEXT_PUBLIC_DISABLE_USAGE_COLLECTION=false
 # If you are using http, you need to set this to false
 NEXT_PUBLIC_SET_SECURE_COOKIE=false
 
+# This is our Amplitude project key, you could ignore it
+NEXT_PUBLIC_AMPLITUDE_KEY=9823fa6e3ff904bec67a8fc90db82fb9
+
 # These env are the base url of our backends, we are using api-gateway right now so you can safely ignore these env. They are only for debugging right now.
 NEXT_PUBLIC_CONSOLE_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_MGMT_BACKEND_BASE_URL=http://localhost:8084
