fix: fix console edition

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ NEXT_PUBLIC_API_VERSION=v1alpha
 NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill-ai-user
 
 # The edition of the console. If you are using our open source console, you don't need to change it
-NEXT_PUBLIC_CONSOLE_EDITION=local:ce-dev
+NEXT_PUBLIC_CONSOLE_EDITION=local-ce:dev
 
 # The endpoint to indicate the base url of api-gateway
 NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://localhost:8080
