feat: bump toolkit version to 0.44.1

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@amplitude/analytics-browser": "^1.9.1",
     "@code-hike/mdx": "^0.7.3",
     "@instill-ai/design-system": "^0.10.6",
-    "@instill-ai/toolkit": "^0.44.1-rc.0",
+    "@instill-ai/toolkit": "^0.44.1",
     "@radix-ui/react-select": "^1.2.1",
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.26.1",
@@ -50,7 +50,7 @@
     "remark-frontmatter": "^4.0.1",
     "sharp": "^0.30.7",
     "shiki": "^0.11.1",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.0",
     "yaml": "^2.0.1",
     "yup": "^0.32.11",
     "zod": "^3.21.4",
@@ -89,7 +89,7 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "17.0.17",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@types/uuid": "^8.3.4",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "autoprefixer": "^10.4.4",
