chore: add license

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_API_VERSION=v1alpha
 # This is for the cookie name we set to ensure usage collection, you can ignore this env
 NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill-ai-user
 
-# The edition of the console. If you are using our open source console, you don't need to change it
+# The edition of the console. If you are using our source available console, you don't need to change it
 NEXT_PUBLIC_CONSOLE_EDITION=local-ce:dev
 
 # The endpoint to indicate the base url of api-gateway
