fix: fix e2e test script on GA

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -95,7 +95,7 @@ jobs:
         run: |
           COMPOSE_PROFILES=all \
           EDITION=local-ce:test \
-          ITMODE=true \
+          ITMODE_ENABLED=true \
           TRITON_CONDA_ENV_PLATFORM=cpu \
           CONSOLE_BASE_URL_HOST=console \
           CONSOLE_BASE_API_GATEWAY_URL_HOST=api-gateway \
