--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -114,6 +114,7 @@ jobs:
           docker build --build-arg TEST_USER='root' -f Dockerfile.playwright -t console-playwright .
           docker run -t --rm \
             -v ${PWD}/playwright-report:/app/playwright-report \
+            -v ${PWD}/playwright-report:/app/test-results \
             -e NEXT_PUBLIC_CONSOLE_BASE_URL=http://console:3000 \
             -e NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://api-gateway:8080 \
             -e NEXT_SERVER_API_GATEWAY_BASE_URL=http://api-gateway:8080 \
@@ -129,4 +130,11 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
+          retention-days: 1
+
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: test-results
+          path: test-results/
           retention-days: 1
