chore: remove ANALYZE=true from script and put it into workflow

--- a/.github/workflows/bundle-diff.yml
+++ b/.github/workflows/bundle-diff.yml
@@ -42,7 +42,7 @@ jobs:
         run: rm -rf node_modules && pnpm i --frozen-lockfile
 
       - name: Build
-        run: pnpm build
+        run: ANALYZE=true pnpm build
         env:
           NEXT_PUBLIC_GITHUB_TOKEN: ${{ secrets.BOTGITHUBTOKEN }}
 
@@ -90,7 +90,7 @@ jobs:
         run: rm -rf node_modules && pnpm i --frozen-lockfile
 
       - name: Build
-        run: pnpm build
+        run: ANALYZE=true pnpm build
         env:
           NEXT_PUBLIC_GITHUB_TOKEN: ${{ secrets.BOTGITHUBTOKEN }}
 
