feat: update the env name related to API

--- a/.env
+++ b/.env
@@ -7,11 +7,23 @@ NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill-ai-user
 # The edition of the console. If you are using our source available console, you don't need to change it
 NEXT_PUBLIC_CONSOLE_EDITION=local-ce:dev
 
-# The endpoint to indicate the base url of api-gateway
-NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://localhost:8080
+# The endpoint to indicate the base url of instill-ai base api-gateway
+NEXT_PUBLIC_BASE_API_GATEWAY_BASE_URL=http://localhost:7080
 
-# This should be set to http://api-gateway:8080 when working in docker with VDP.
-NEXT_SERVER_API_GATEWAY_BASE_URL=http://localhost:8080
+# This should be set to http://<container-name>:<port> when working in docker with VDP.
+NEXT_SERVER_BASE_API_GATEWAY_BASE_URL=http://api-gateway-base:7080
+
+# The endpoint to indicate the base url of instill-ai vdp api-gateway
+NEXT_PUBLIC_VDP_API_GATEWAY_BASE_URL=http://localhost:8070
+
+# This should be set to http://<container-name>:<port> when working in docker with VDP.
+NEXT_SERVER_VDP_API_GATEWAY_BASE_URL=http://api-gateway-vdp:8080
+
+# The endpoint to indicate the base url of instill-ai model api-gateway
+NEXT_PUBLIC_MODEL_API_GATEWAY_BASE_URL=http://localhost:9080
+
+# This should be set to http://<container-name>:<port> when working in docker with VDP.
+NEXT_SERVER_MODEL_API_GATEWAY_BASE_URL=http://api-gateway-model:9080
 
 # This env is a placeholder, do not use it
 NEXT_PUBLIC_SELF_SIGNED_CERTIFICATION=false
