--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -116,8 +116,12 @@ jobs:
             -v ${PWD}/playwright-report:/app/playwright-report \
             -v ${PWD}/playwright-report:/app/test-results \
             -e NEXT_PUBLIC_CONSOLE_BASE_URL=http://console:3000 \
-            -e NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://api-gateway:8080 \
-            -e NEXT_SERVER_API_GATEWAY_BASE_URL=http://api-gateway:8080 \
+            -e NEXT_PUBLIC_BASE_API_GATEWAY_BASE_URL=http://api-gateway-base:7070 \
+            -e NEXT_SERVER_BASE_API_GATEWAY_BASE_URL=http://api-gateway-base:7070 \
+            -e NEXT_PUBLIC_VDP_API_GATEWAY_BASE_URL=http://api-gateway-vdp:8070 \
+            -e NEXT_SERVER_VDP_API_GATEWAY_BASE_URL=http://api-gateway-vdp:8070 \
+            -e NEXT_PUBLIC_MODEL_API_GATEWAY_BASE_URL=http://api-gateway-vdp:9070 \
+            -e NEXT_SERVER_MODEL_API_GATEWAY_BASE_URL=http://api-gateway-vdp:9070 \
             -e NEXT_PUBLIC_API_VERSION=v1alpha \
             -e NEXT_PUBLIC_SELF_SIGNED_CERTIFICATION=false \
             -e NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill-ai-user \
