--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "Elastic License 2.0",
   "private": false,
   "scripts": {
-    "docker-build": "docker build -f Dockerfile -t instill-console .",
-    "docker-run": "docker run --rm -t --network instill-network --entrypoint ./entrypoint.sh -p 3000:3000 -e NEXT_PUBLIC_CONSOLE_BASE_URL='http://console:3000' -e NEXT_PUBLIC_API_GATEWAY_BASE_URL='http://api-gateway:8080' -e NEXT_PUBLIC_API_VERSION='v1alpha' -e NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME='instill-ai-user' -e NEXT_SERVER_API_GATEWAY_BASE_URL=http://api-gateway:8080 -e NEXT_PUBLIC_DISABLE_CREATE_UPDATE_DELETE_RESOURCE=false -e NEXT_PUBLIC_SET_SECURE_COOKIE=false instill-console",
-    "docker-build-test": "docker build -f Dockerfile.playwright --build-arg TEST_USER='root' -t instill-console-integration .",
-    "docker-run-test": "docker run --rm -t --network instill-network --entrypoint ./entrypoint-playwright.sh -e NEXT_PUBLIC_CONSOLE_BASE_URL='http://console:3000' -e NEXT_PUBLIC_API_GATEWAY_BASE_URL='http://api-gateway:8080' -e NEXT_PUBLIC_API_VERSION='v1alpha' -e NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME='instill-ai-user' -e NEXT_PUBLIC_SELF_SIGNED_CERTIFICATION=true instill-console-integration",
+    "docker-build": "./scripts/docker-build.sh",
+    "docker-run": "./scripts/docker-run.sh",
+    "docker-build-test": "./scripts/docker-build-test.sh",
+    "docker-run-test": "./scripts/docker-run-test.sh",
     "docker:prune-cache": "docker buildx prune",
     "dev": "NEXT_ENV_UPDATE_ENV_FILE=false node next-env.mjs && next dev",
     "build": "next build",
@@ -28,13 +28,17 @@
   "dependencies": {
     "@amplitude/analytics-browser": "^1.9.1",
     "@code-hike/mdx": "^0.7.3",
-    "@instill-ai/design-system": "^0.18.1",
-    "@instill-ai/design-tokens": "^0.1.5",
-    "@instill-ai/toolkit": "^0.47.4",
+    "@hookform/resolvers": "^3.1.1",
+    "@instill-ai/design-system": "^0.23.0",
+    "@instill-ai/design-tokens": "^0.3.0",
+    "@instill-ai/toolkit": "^0.49.0-rc.0",
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-select": "^1.2.1",
-    "@tanstack/react-query": "^4.26.1",
-    "@tanstack/react-query-devtools": "^4.26.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query-devtools": "^4.29.19",
     "axios": "^1.3.4",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
@@ -47,11 +51,13 @@
     "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-markdown": "^8.0.3",
     "react-select": "^5.3.1",
     "remark-frontmatter": "^4.0.1",
     "sharp": "^0.30.7",
     "shiki": "^0.11.1",
+    "tailwindcss-animate": "^1.0.6",
     "uuid": "^9.0.0",
     "yaml": "^2.0.1",
     "yup": "^0.32.11",
