--- a/package.json
+++ b/package.json
@@ -29,14 +29,20 @@
     "@amplitude/analytics-browser": "^1.9.1",
     "@code-hike/mdx": "^0.7.3",
     "@hookform/resolvers": "^3.1.1",
-    "@instill-ai/design-system": "^0.23.0",
+    "@instill-ai/design-system": "^0.24.1",
     "@instill-ai/design-tokens": "^0.3.0",
-    "@instill-ai/toolkit": "^0.49.0-rc.9",
-    "@radix-ui/react-collapsible": "^1.0.3",
+    "@instill-ai/toolkit": "^0.49.1",
+    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-collapsible": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
     "axios": "^1.3.4",
