--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@amplitude/analytics-browser": "^1.9.1",
     "@code-hike/mdx": "^0.7.3",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/utilities": "^3.2.1",
     "@hookform/resolvers": "^3.1.1",
     "@instill-ai/design-system": "^0.25.0",
     "@instill-ai/design-tokens": "^0.3.0",
@@ -50,6 +52,7 @@
     "cookie": "^0.5.0",
     "copy-to-clipboard": "^3.3.2",
     "cross-env": "^7.0.3",
+    "elkjs": "^0.8.2",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
     "next": "^13.4.2",
@@ -60,11 +63,14 @@
     "react-hook-form": "^7.45.0",
     "react-markdown": "^8.0.3",
     "react-select": "^5.3.1",
+    "reactflow": "^11.7.4",
     "remark-frontmatter": "^4.0.1",
     "sharp": "^0.30.7",
     "shiki": "^0.11.1",
     "tailwindcss-animate": "^1.0.6",
+    "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
+    "web-worker": "^1.2.0",
     "yaml": "^2.0.1",
     "yup": "^0.32.11",
     "zod": "^3.21.4",
