--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "cookie": "^0.5.0",
     "copy-to-clipboard": "^3.3.2",
     "cross-env": "^7.0.3",
+    "echarts": "^5.4.2",
+    "elkjs": "^0.8.2",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
     "next": "^13.4.2",
