--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@code-hike/mdx": "^0.7.3",
     "@dnd-kit/core": "^6.0.8",
     "@hookform/resolvers": "^3.1.1",
-    "@instill-ai/design-system": "^0.28.0",
+    "@instill-ai/design-system": "^0.29.0",
     "@instill-ai/design-tokens": "^0.3.0",
-    "@instill-ai/toolkit": "^0.54.0",
+    "@instill-ai/toolkit": "^0.56.1-rc.1",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
