--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@code-hike/mdx": "^0.7.3",
     "@dnd-kit/core": "^6.0.8",
     "@hookform/resolvers": "^3.1.1",
-    "@instill-ai/design-system": "^0.29.0",
+    "@instill-ai/design-system": "^0.30.0",
     "@instill-ai/design-tokens": "^0.3.0",
-    "@instill-ai/toolkit": "^0.56.1-rc.1",
+    "@instill-ai/toolkit": "^0.58.0",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -93,7 +93,6 @@
     "@storybook/react": "^7.0.0-beta.29",
     "@storybook/react-webpack5": "^7.0.0-beta.29",
     "@storybook/testing-library": "^0.0.14-next.1",
-    "@tailwindcss/line-clamp": "^0.4.0",
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^13.4.0",
