--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "@/stores": ["stores"],
       "@/stores/*": ["stores/*"]
     },
-    "target": "es5",
+    "target": "es2015",
+    "downlevelIteration": true,
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "jsx": "preserve",
