feat: console metric dashboard INS-1004 (#468)
Because

- we need metric dashboard for user to have the summary about the
pipelines
- It includes some basic filter
  - Filter by days
  - filter by Pipeline status
- Dashboard also have chart representation for the triggers that happen
within the time.

This commit

- Metric dashboard



**steps to test the PR.**

https://linear.app/instill-ai/issue/INS-1228/write-down-how-to-test-metric-dashboard

cc - @EiffelFly

---------

Co-authored-by: EiffelFly <57251712+EiffelFly@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "@/stores/*": ["stores/*"]
     },
     "target": "es5",
+    "downlevelIteration": true,
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "jsx": "preserve",
