--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@code-hike/mdx": "^0.7.3",
     "@dnd-kit/core": "^6.0.8",
     "@hookform/resolvers": "^3.1.1",
-    "@instill-ai/design-system": "^0.31.0",
+    "@instill-ai/design-system": "^0.32.0",
     "@instill-ai/design-tokens": "^0.3.1",
-    "@instill-ai/toolkit": "^0.61.0-rc.26",
+    "@instill-ai/toolkit": "^0.61.0-rc.31",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -51,6 +51,7 @@
     "cookie": "^0.5.0",
     "copy-to-clipboard": "^3.3.2",
     "cross-env": "^7.0.3",
+    "echarts": "^5.4.2",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
     "next": "^13.4.2",
