--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@code-hike/mdx": "^0.7.3",
     "@dnd-kit/core": "^6.0.8",
     "@hookform/resolvers": "^3.1.1",
-    "@instill-ai/design-system": "^0.32.0",
+    "@instill-ai/design-system": "^0.33.0-rc.2",
     "@instill-ai/design-tokens": "^0.3.1",
-    "@instill-ai/toolkit": "^0.61.0-rc.48",
+    "@instill-ai/toolkit": "^0.61.0-rc.50",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
