--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
+    "@tanstack/react-table": "^8.9.3",
     "axios": "^1.3.4",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
