--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@instill-ai/design-system": "^0.35.1",
     "@instill-ai/design-tokens": "^0.3.2",
-    "@instill-ai/toolkit": "^0.61.9",
+    "@instill-ai/toolkit": "^0.63.6",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -46,6 +46,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
+    "@tanstack/react-table": "^8.9.3",
     "axios": "^1.3.4",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
