--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@code-hike/mdx": "^0.7.3",
     "@dnd-kit/core": "^6.0.8",
     "@hookform/resolvers": "^3.1.1",
-    "@instill-ai/design-system": "^0.40.2",
+    "@instill-ai/design-system": "^0.41.0-rc.0",
     "@instill-ai/design-tokens": "^0.3.2",
     "@instill-ai/toolkit": "^0.64.1",
     "@radix-ui/react-checkbox": "^1.0.3",
