--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@instill-ai/design-system": "^0.41.0-rc.0",
     "@instill-ai/design-tokens": "^0.3.2",
-    "@instill-ai/toolkit": "^0.64.2",
+    "@instill-ai/toolkit": "^0.66.0-rc.3",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
