--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@instill-ai/design-system": "^0.41.0-rc.0",
     "@instill-ai/design-tokens": "^0.3.2",
-    "@instill-ai/toolkit": "^0.66.0-rc.3",
+    "@instill-ai/toolkit": "^0.66.0-rc.6",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -130,6 +130,7 @@
     "lint-staged": ">=10",
     "msw": "^0.42.1",
     "npm-run-all": "^4.1.5",
+    "openapi-types": "^12.1.3",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.8",
