--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@code-hike/mdx": "^0.7.3",
     "@dnd-kit/core": "^6.0.8",
     "@hookform/resolvers": "^3.1.1",
-    "@instill-ai/design-system": "^0.36.6",
+    "@instill-ai/design-system": "^0.47.2",
     "@instill-ai/design-tokens": "^0.3.2",
-    "@instill-ai/toolkit": "^0.64.2",
+    "@instill-ai/toolkit": "^0.66.0-rc.34",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -53,6 +53,7 @@
     "copy-to-clipboard": "^3.3.2",
     "cross-env": "^7.0.3",
     "echarts": "^5.4.2",
+    "elkjs": "^0.8.2",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
     "next": "^13.4.2",
@@ -62,7 +63,7 @@
     "react-hook-form": "^7.45.0",
     "react-markdown": "^8.0.3",
     "react-select": "^5.3.1",
-    "reactflow": "^11.7.4",
+    "reactflow": "^11.8.3",
     "remark-frontmatter": "^4.0.1",
     "sharp": "^0.30.7",
     "shiki": "^0.11.1",
@@ -129,6 +130,7 @@
     "lint-staged": ">=10",
     "msw": "^0.42.1",
     "npm-run-all": "^4.1.5",
+    "openapi-types": "^12.1.3",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.8",
