--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@code-hike/mdx": "^0.7.3",
     "@dnd-kit/core": "^6.0.8",
     "@hookform/resolvers": "^3.1.1",
-    "@instill-ai/design-system": "^0.49.0",
+    "@instill-ai/design-system": "^0.49.1",
     "@instill-ai/design-tokens": "^0.3.2",
-    "@instill-ai/toolkit": "^0.67.1",
+    "@instill-ai/toolkit": "^0.68.0-rc.15",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -70,7 +70,6 @@
     "tailwindcss-animate": "^1.0.6",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
-    "web-worker": "^1.2.0",
     "yaml": "^2.0.1",
     "yup": "^0.32.11",
     "zod": "^3.21.4",
@@ -105,8 +104,8 @@
     "@types/json-schema": "^7.0.11",
     "@types/node": "^17.0.22",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^17.0.41",
-    "@types/react-dom": "17.0.17",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
