chore: remove storybook

--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --passWithNoTests",
-    "sb": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
     "prepare": "node -e \"if (process.env.NODE_ENV === 'production'){process.exit(1)} \" || husky install",
     "prettier:fix": "prettier --write",
     "prettier:check": "prettier --check",
@@ -32,7 +30,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@instill-ai/design-system": "^0.52.0",
     "@instill-ai/design-tokens": "^0.3.2",
-    "@instill-ai/toolkit": "^0.67.4",
+    "@instill-ai/toolkit": "^0.68.0-rc.37",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -70,7 +68,6 @@
     "tailwindcss-animate": "^1.0.6",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
-    "web-worker": "^1.2.0",
     "yaml": "^2.0.1",
     "yup": "^0.32.11",
     "zod": "^3.21.4",
@@ -85,17 +82,6 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@next/env": "^12.2.3",
     "@playwright/test": "^1.35.1",
-    "@storybook/addon-actions": "^7.0.0-beta.29",
-    "@storybook/addon-docs": "^7.0.0-beta.29",
-    "@storybook/addon-essentials": "^7.0.0-beta.29",
-    "@storybook/addon-interactions": "^7.0.0-beta.29",
-    "@storybook/addon-links": "^7.0.0-beta.29",
-    "@storybook/addon-postcss": "^3.0.0-alpha.1",
-    "@storybook/addons": "^7.0.0-beta.29",
-    "@storybook/client-api": "^7.0.0-beta.29",
-    "@storybook/react": "^7.0.0-beta.29",
-    "@storybook/react-webpack5": "^7.0.0-beta.29",
-    "@storybook/testing-library": "^0.0.14-next.1",
     "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^13.4.0",
@@ -105,8 +91,8 @@
     "@types/json-schema": "^7.0.11",
     "@types/node": "^17.0.22",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^17.0.41",
-    "@types/react-dom": "17.0.17",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
@@ -123,7 +109,6 @@
     "eslint-plugin-playwright": "^0.9.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-testing-library": "^5.3.1",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
@@ -136,8 +121,6 @@
     "prettier-plugin-tailwindcss": "^0.1.8",
     "react-is": "^18.2.0",
     "require-from-string": "^2.0.2",
-    "storybook": "^7.0.0-beta.29",
-    "storybook-addon-next-router": "^4.0.2",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
@@ -148,10 +131,6 @@
       "pnpm prettier:fix",
       "eslint --cache --fix",
       "jest --bail --findRelatedTests"
-    ],
-    "*.stories.{ts,tsx}": [
-      "pnpm prettier:fix",
-      "eslint --cache --fix"
     ]
   },
   "engines": {
