ci(workflow): make disk free of GA hosted runner

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -82,7 +82,7 @@ jobs:
           android: true
           dotnet: true
           haskell: true
-          large-packages: false
+          large-packages: true
           docker-images: true
           swap-storage: true
 
